fix(GroovyScriptEngine)